added XML metadata
All downloads now include FGDC compliant metadata in XML format

Minor text changes, bug fixes

--- a/www/METADATA_EJAREAS_2023_NBEP2023.html
+++ b/www/METADATA_EJAREAS_2023_NBEP2023.html
@@ -1721,26 +1721,26 @@ Column Names</h1>
 </div>
 <div id="description" class="section level2">
 <h2>Description</h2>
-<p>Environmental justice metrics in the Narragansett Bay estuary region
-as calculated by the Narragansett Bay Estuary Program (NBEP) <a href="https://nbep.shinyapps.io/ejmap/"><strong>EJMAP</strong></a> tool.
-EJMAP provides population demographics and other information at the U.S.
-Census block group scale. Please review the <a href="https://narragansett-bay-estuary-program-nbep.hub.arcgis.com/documents/396d763941a34e57a2e6eebf05f82b8b/explore"><strong>technical
-documentation</strong></a> for additional information.</p>
+<p>Environmental justice indicators and priority areas in the
+Narragansett Bay region at the U.S. Census “block group” scale. Scores
+were calculated using the Narragansett Bay Estuary Program (NBEP) <a href="https://nbep.shinyapps.io/ejmap/"><strong>EJMAP</strong></a> tool.
+This dataset is intended for general planning, graphic display, and GIS
+analysis.</p>
 </div>
 <div id="data-source" class="section level2">
 <h2>Data Source</h2>
-<p>American Community Survey (2017-2021); Department of Transportation
-(2020); Environmental Protection Agency (2019, 2020, 2022); First Street
-(2022); National Landcover Database (2021); National Landcover Database,
-US Forestry Service (2021)</p>
+<p>U.S. Environmental Protection Agency EJSCREEN (2023); First Street
+(2022); National Landcover Database (2021); Narragansett Bay Estuary
+Program (2023)</p>
 </div>
 <div id="date-published" class="section level2">
 <h2>Date Published</h2>
-<p>2023-08-25</p>
+<p>2023-09-28</p>
 </div>
 <div id="use-limitations" class="section level2">
 <h2>Use Limitations</h2>
-<p>This dataset is provided “as is”. The producer(s) of this dataset,
+<p>
+This dataset is provided “as is”. The producer(s) of this dataset,
 contributors to this dataset, and the Narragansett Bay Estuary Program
 (NBEP) do not make any warranties of any kind for this dataset, and are
 not liable for any loss or damage however and whenever caused by any use
@@ -1748,39 +1748,44 @@ of this dataset. This data is provided under the <a href="https://creativecommon
 4.0 International (CC BY-NC-SA 4.0) license</strong></a>. Once acquired,
 any modification made to the data must be noted in the metadata. Please
 acknowledge both NBEP and the primary producer(s) of this dataset or any
-derived products. These data are intended for use as a tool for
-reference, display, and general GIS analysis purposes only. It is the
-responsibility of the data user to use the data appropriately and
-consistent with the limitations of geospatial data in general and these
-data in particular. The information contained in these data may be
-dynamic and could change over time. The data accuracy is checked against
-best available sources which may be dated. The data are not better than
-the original sources from which they are derived. These data are not
-designed for use as a primary regulatory tool in permitting or siting
-decisions and are not a legally authoritative source for the location of
-natural or manmade features. The depicted boundaries, interpretations,
-and analysis derived from them have not been verified at the site level
-and do not eliminate the need for onsite sampling, testing, and detailed
-study of specific sites. This project was funded by agreements by the
-Environmental Protection Agency (EPA) to Roger Williams University (RWU)
-in partnership with the Narragansett Bay Estuary Program. Although the
-information in this document has been funded wholly or in part by EPA
-under the agreements CE00A00967 to RWU, it has not undergone the
-Agency’s publications review process and therefore, may not necessarily
-reflect the views of the Agency and no official endorsement should be
-inferred. The viewpoints expressed here do not necessarily represent
-those of the Narragansett Bay Estuary Program, RWU, or EPA nor does
-mention of trade names, commercial products, or causes constitute
-endorsement or recommendation for use.</p>
+derived products.
+</p>
+<p>
+These data are intended for use as a tool for reference, display, and
+general GIS analysis purposes only. It is the responsibility of the data
+user to use the data appropriately and consistent with the limitations
+of geospatial data in general and these data in particular. The
+information contained in these data may be dynamic and could change over
+time. The data accuracy is checked against best available sources which
+may be dated. The data are not better than the original sources from
+which they are derived. These data are not designed for use as a primary
+regulatory tool in permitting or siting decisions and are not a legally
+authoritative source for the location of natural or manmade features.
+The depicted boundaries, interpretations, and analysis derived from them
+have not been verified at the site level and do not eliminate the need
+for onsite sampling, testing, and detailed study of specific sites.
+</p>
+<p>
+This project was funded by agreements by the Environmental Protection
+Agency (EPA) to Roger Williams University (RWU) in partnership with the
+Narragansett Bay Estuary Program. Although the information in this
+document has been funded wholly or in part by EPA under the agreements
+CE00A00967 to RWU, it has not undergone the Agency’s publications review
+process and therefore, may not necessarily reflect the views of the
+Agency and no official endorsement should be inferred. The viewpoints
+expressed here do not necessarily represent those of the Narragansett
+Bay Estuary Program, RWU, or EPA nor does mention of trade names,
+commercial products, or causes constitute endorsement or recommendation
+for use.
+</p>
 </div>
 <div id="point-of-contact" class="section level2">
 <h2>Point of Contact</h2>
-<p>Mariel Sorlien</p>
 <p>Narragansett Bay Estuary Program</p>
 <p>235 Promenade Ave, Suite 393</p>
 <p>Providence, RI 02908</p>
 <p>Telephone: 401-633-0550</p>
-<p>Email: <a href="mailto:msorlien@nbep.org" class="email">msorlien@nbep.org</a></p>
+<p>Email: <a href="mailto:info@nbep.org" class="email">info@nbep.org</a></p>
 </div>
 </div>
 <div id="selected-variables" class="section level1">
