Updated parameter names
Hazardous Waste Proximity > Hazardous Waste Facilities
Wastewater Discharge > Water Pollution

--- a/www/METADATA_EJAREAS_2023_NBEP2023.html
+++ b/www/METADATA_EJAREAS_2023_NBEP2023.html
@@ -1735,7 +1735,7 @@ Program (2023)</p>
 </div>
 <div id="date-published" class="section level2">
 <h2>Date Published</h2>
-<p>2023-09-28</p>
+<p>2023-12-12</p>
 </div>
 <div id="use-limitations" class="section level2">
 <h2>Use Limitations</h2>
@@ -1894,7 +1894,7 @@ Traffic Proximity
 </tr>
 <tr>
 <td style="text-align:left;">
-Hazardous Waste Proximity
+Hazardous Waste Facilities
 </td>
 <td style="text-align:right;">
 1.0
@@ -1902,7 +1902,7 @@ Hazardous Waste Proximity
 </tr>
 <tr>
 <td style="text-align:left;">
-Wastewater Discharge
+Water Pollution
 </td>
 <td style="text-align:right;">
 1.0
@@ -2204,7 +2204,7 @@ Traffic proximity
 PTSDF
 </td>
 <td style="text-align:left;">
-Hazardous waste proximity
+Hazardous waste facilities
 </td>
 </tr>
 <tr>
@@ -2212,7 +2212,7 @@ Hazardous waste proximity
 PWDIS
 </td>
 <td style="text-align:left;">
-Wastewater discharge
+Water pollution
 </td>
 </tr>
 <tr>
@@ -2308,7 +2308,7 @@ Regional percentile for traffic proximity
 N_PTSDF
 </td>
 <td style="text-align:left;">
-Regional percentile for hazardous waste proximity
+Regional percentile for hazardous waste facilities
 </td>
 </tr>
 <tr>
@@ -2316,7 +2316,7 @@ Regional percentile for hazardous waste proximity
 N_PWDIS
 </td>
 <td style="text-align:left;">
-Regional percentile for wastewater discharge
+Regional percentile for water pollution
 </td>
 </tr>
 <tr>
